--- a/style.css
+++ b/style.css
@@ -1292,7 +1292,7 @@ body {
     }
   
     .mobile-menu {
-      display: flex;
+      display: none;;
       flex-direction: column;
       position: absolute;
       top: 60px;
